--- a/content/view.html
+++ b/content/view.html
@@ -1,24 +1,30 @@
 <!--[*]
 [tt=main][/tt]
 [script]view.php[/script]
-[bkvar=date][/bkvar]
 [bkvar=notpub]{#news.notpub}[/bkvar]
-[bkvar=source]
-<div class="t80 additional bk_news_source">{#news.source}: <a href="#srclnk#" class="additional">#srcnm#</a></div>
-[/bkvar]
-[bkvar=image]<img src='/filemanager/file.html?i=#id#' />[/bkvar]
-[bkvar=title][/bkvar]
-[bkvar=intro][/bkvar]
-[bkvar=body][/bkvar]
-[bkvar=fedit]<input type="button" onclick="Brick.mod.news.api.edit({v#id});" value="{#news.viewbedit}" />[/bkvar]
-[bkvar=feditbody][/bkvar]
-[*]-->
 
-<h1>[bkvar]title[/bkvar]</h1>
-<div class="t80 additional">[bkvar]date[/bkvar]</div>
-<div class="bk_news_body">
-[bkvar]image[/bkvar]
-[bkvar]intro[/bkvar]
-[bkvar]body[/bkvar]
-[bkvar]source[/bkvar]
+[bkvar=title]<h1>{v#val}</h1>[/bkvar]
+
+[bkvar=date]<div class="date">{v#val}</div>[/bkvar]
+[bkvar=source]
+	<div class="source">
+		{#news.source}: <a href="{v#lnk}">{v#nm}</a>
+	</div>
+[/bkvar]
+[bkvar=image]<div class="image"><img src='{v#src}' />[/bkvar]</div>
+[bkvar=intro]<div class="intro">{v#val}</div>[/bkvar]
+[bkvar=body]<div class="body">{v#val}</div>[/bkvar]
+
+[bkvar=notfound]<div class="newspage">Новость не найдена</div>[/bkvar]
+
+[*]-->
+<div class="newspage">
+	[bkvar]date[/bkvar]
+	[bkvar]title[/bkvar]
+	[bkvar]image[/bkvar]
+	<div class="bd">
+		[bkvar]intro[/bkvar]
+		[bkvar]body[/bkvar]
+	</div>
+	[bkvar]source[/bkvar]
 </div>
