--- a/content/view.html
+++ b/content/view.html
@@ -18,7 +18,7 @@
 [bkvar=notfound]<div class="newspage">Новость не найдена</div>[/bkvar]
 
 [*]-->
-<div class="newspage">
+<div class="mod-news bd">
 	[bkvar]date[/bkvar]
 	[bkvar]title[/bkvar]
 	[bkvar]image[/bkvar]
