--- a/content/index.html
+++ b/content/index.html
@@ -20,9 +20,7 @@
 [*]-->
 <div class="mod-news bd">
 	<div class="tlnews">
-		<h2>{#news.title}</h2>
-		<span class="newsblock-rssicon"></span>
-		<div class="clear"></div>
+		<h2>{#news.title} <span class="newsblock-rssicon"></span></h2>
 	</div>
 	<dl class="newslist">[bkvar]lst[/bkvar]</dl>
 	[mod]sitemap:paginator[/mod]
