Новости: исправлена ошибка редактора в BosUI

--- a/js/editor.htm
+++ b/js/editor.htm
@@ -77,7 +77,7 @@
 								</td>
 								<td valign="top" align="right" style="width: 40%;">
 									<div  class="nimage">
-										<img id="{i#image}" src="/images/clear.gif" />
+										<img id="{i#image}" src="/images/empty.gif" />
 									</div>
 								</td>
 							</tr></tbody></table>
