Слияние из бранчес 0.5.5.1

--- a/brick/lastnews.html
+++ b/brick/lastnews.html
@@ -16,6 +16,6 @@
 <ul class="lastnews">
 	[bkvar]result[/bkvar]
 	<li class="fullnews">
-		<a href="[bkvar]fullnewslink[/bkvar]">{#news.pubcolumnblock_allnews}</a>
+		<a href="[bkvar]fullnewslink[/bkvar]">{#brick.lastnews.1}</a>
 	</li>
 </ul>
