--- a/brick/newsblock.html
+++ b/brick/newsblock.html
@@ -6,7 +6,7 @@
 
 [bkvar=rss]
 	<span class="rssicon">
-		<a href='/rss/news/' title='Канал новостей в формате RSS'>
+		<a href='/rss/news/' title='{#brick.newsblock.1}'>
 			<img src='/modules/rss/images/rss-icon-16px-op50.gif' />
 		</a>
 	</span>
@@ -16,7 +16,7 @@
 [*]-->
 <div class="mod-news box">
 	<div class="newsblock">
-		<h3>{#news.title} {v#rss}</h3>
+		<h3>{#brick.newsblock.2} {v#rss}</h3>
 		[mod]news:lastnews[/mod]
 	</div>
 </div>
