--- a/content/view.html
+++ b/content/view.html
@@ -3,7 +3,7 @@
 [script]view.php[/script]
 [bkvar=notpub]{#news.notpub}[/bkvar]
 
-[bkvar=title]<h1>{v#val}</h1>[/bkvar]
+[bkvar=title]<h3>{v#val}</h3>[/bkvar]
 
 [bkvar=date]<div class="date">{v#val}</div>[/bkvar]
 [bkvar=source]
@@ -15,7 +15,7 @@
 [bkvar=intro]<div class="intro">{v#val}</div>[/bkvar]
 [bkvar=body]<div class="body">{v#val}</div>[/bkvar]
 
-[bkvar=notfound]<div class="newspage">Новость не найдена</div>[/bkvar]
+[bkvar=notfound]<div class="newspage">{#content.view.1}</div>[/bkvar]
 
 [*]-->
 <div class="mod-news bd">
