--- a/content/index.html
+++ b/content/index.html
@@ -20,7 +20,7 @@
 [*]-->
 <div class="mod-news bd">
 	<div class="tlnews">
-		<h2>{#news.title} <span class="newsblock-rssicon"></span></h2>
+		<h2>{#content.index.1}</h2>
 	</div>
 	<dl class="newslist">[bkvar]lst[/bkvar]</dl>
 	[mod]sitemap:paginator[/mod]
