--- a/js/manager.htm
+++ b/js/manager.htm
@@ -1,14 +1,11 @@
-<!--{panel}-->
-<div class='hd'>Список новостей</div>
+<!--{panel}--><div class='hd'>{#mod.news.manager.panel.1}</div>
 <div class='bd'>
 	<div id="{i#container}"></div>
 	<div style="text-align: right">
-		<input id="{i#bclose}" type="button" value="Закрыть" />
+		<input id="{i#bclose}" type="button" value="{#mod.news.manager.panel.2}" />
 	</div>
 </div>
-
-<!--{widget}-->
-<h3>{#news.admin.panel.title}</h3>
+<!--{widget}--><h3>{#mod.news.admin.panel.title}</h3>
 
 <table width="100%">
 	<tr>
@@ -17,7 +14,7 @@
 		</td>
 		<td width="50%">
 			<div style="text-align: right">
-				<input id="{i#btnnew}" type="button" value="{#news.admin.panel.addbutton}" />
+				<input id="{i#btnnew}" type="button" value="{#mod.news.admin.panel.addbutton}" />
 			</div>
 		</td>
 	</tr>
@@ -29,19 +26,17 @@
 			<div id='{i#pagbot}'></div>
 		</td>
 		<td width="50%" style="text-align: right">
-			<a href="#" id="{i#rcclear}">{#news.admin.panel.recycle}</a>
+			<a href="#" id="{i#rcclear}">{#mod.news.admin.panel.recycle}</a>
 		</td>
 	</tr>
 </table>
-
-<!--{table}-->
-<table class="bk-table-def">
+<!--{table}--><table class="bk-table-def">
 	<thead>
 		<tr>
-			<th>{#news.admin.table.created}</th>
-			<th>{#news.admin.table.title}</th>
+			<th>{#mod.news.admin.table.created}</th>
+			<th>{#mod.news.admin.table.title}</th>
 			<th></th>
-			<th>{#news.admin.table.published}</th>
+			<th>{#mod.news.admin.table.published}</th>
 			<th></th>
 			<th></th>
 			{v#scb}
@@ -49,38 +44,25 @@
 	</thead>
 	<tbody>{v#rows}</tbody>
 </table>
-
-<!--{rowwait}-->
-<tr>
-	<td colspan="7">Идет загрузка данных...</td>
+<!--{rowwait}--><tr>
+	<td colspan="7">{#mod.news.manager.rowwait.1}</td>
 </tr>
-
-
-<!--{row}-->
-<tr>
+<!--{row}--><tr>
 	<td>{v#dl}</td>
 	<td>{v#tl}</td>
-	<td><a href="{v#prv}" id="{i#title}-{v#id}" target="_blank" title="{#news.admin.row.title}">{#news.admin.row.title}</a></td>
+	<td><a href="{v#prv}" id="{i#title}-{v#id}" target="_blank" title="{#mod.news.admin.row.title}">{#mod.news.admin.row.title}</a></td>
 	<td>{v#dp}</td>
-	<td><a id="{i#edit}-{v#id}" href="#">{#news.admin.row.edit}</a></td>
-	<td><a id="{i#remove}-{v#id}" href="#">{#news.admin.row.delete}</a></td>
+	<td><a id="{i#edit}-{v#id}" href="#">{#mod.news.admin.row.edit}</a></td>
+	<td><a id="{i#remove}-{v#id}" href="#">{#mod.news.admin.row.delete}</a></td>
 	{v#scb}
 </tr>
-
-<!--{rowdel}-->
-<tr>
+<!--{rowdel}--><tr>
 	<td style="text-decoration: line-through;">{v#dl}</td>
 	<td style="text-decoration: line-through;">{v#tl}</td>
-	<td><a href="{v#prv}" id="{i#title}-{v#id}" target="_blank" title="{#news.admin.rowdel.prv}">{#news.admin.rowdel.prv}</a></td>
-	<td colspan="3" align="center" style="text-align: center;"><a id="{i#restore}-{v#id}" href="#">{#news.admin.rowdel.restore}</a></td>
+	<td><a href="{v#prv}" id="{i#title}-{v#id}" target="_blank" title="{#mod.news.admin.rowdel.prv}">{#mod.news.admin.rowdel.prv}</a></td>
+	<td colspan="3" align="center" style="text-align: center;"><a id="{i#restore}-{v#id}" href="#">{#mod.news.admin.rowdel.restore}</a></td>
 	{v#scb}
 </tr>
-
-<!--{btnpub}-->
-<a id="{i#id}-{v#id}" href="#">{#news.admin.btnpub.title}</a>
-
-<!--{scbhead}-->
-<th>{#news.admin.scbhead.title}</th>
-
-<!--{scbrow}-->
-<td><a href="#" id="{i#id}-{v#id}">{#news.admin.scbrow.title}</a></td>
+<!--{btnpub}--><a id="{i#id}-{v#id}" href="#">{#mod.news.admin.btnpub.title}</a>
+<!--{scbhead}--><th>{#mod.news.admin.scbhead.title}</th>
+<!--{scbrow}--><td><a href="#" id="{i#id}-{v#id}">{#mod.news.admin.scbrow.title}</a></td>
