optimize css by less, update template by bootstrap 3

--- a/src/brick/lastnews.html
+++ b/src/brick/lastnews.html
@@ -1,5 +1,5 @@
 <!--[*]
-[script]lastnews.php[/script]
+[script]brick_lastnews.php[/script]
 [mcss=news]news.css[/mcss]
 [bkvar=result][/bkvar]
 [bkvar=row]
