--- a/src/content/index.html
+++ b/src/content/index.html
@@ -2,11 +2,11 @@
 [tt=main][/tt]
 
 [script]content_index.php[/script]
-[mcss=sitemap]sitemap.css[/mcss]
 [mcss=news]news.css[/mcss]
 
 [ph=news:page_count]10[/ph]
 [ph=news:date_format]Y-m-d[/ph]
+[ph=news:list_meta_title]Новости[/pj]
 
 [bkvar=lst][/bkvar]
 [bkvar=row]
@@ -16,6 +16,7 @@
 		{v#intro}
 	</dd>
 [/bkvar]
+
 
 [*]-->
 <div class="mod-news">
