--- a/src/brick/newsblock.html
+++ b/src/brick/newsblock.html
@@ -1,5 +1,5 @@
 <!--[*]
-[script]brick_newsblock.php[/script]
+[script]brick/newsblock.php[/script]
 [mod=news]lastnews|count=3[/mod]
 [p=hideintro][/p]
 [p=showempty][/p]
