--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,7 +1,7 @@
 <!--[*]
 [tt=main][/tt]
 
-[script]content_index.php[/script]
+[script]content/index.php[/script]
 [mcss=news]news.css[/mcss]
 
 [ph=news:page_count]10[/ph]
