--- a/src/content/view.html
+++ b/src/content/view.html
@@ -1,6 +1,6 @@
 <!--[*]
 [tt=main][/tt]
-[script]content_view.php[/script]
+[script]content/view.php[/script]
 [bkvar=notpub]{#news.notpub}[/bkvar]
 
 [bkvar=title]<h3>{v#val}</h3>[/bkvar]
