--- a/src/brick/lastnews.html
+++ b/src/brick/lastnews.html
@@ -1,5 +1,5 @@
 <!--[*]
-[script]brick_lastnews.php[/script]
+[script]brick/lastnews.php[/script]
 [mcss=news]news.css[/mcss]
 [bkvar=result][/bkvar]
 [bkvar=row]
