--- a/src/js/manager.htm
+++ b/src/js/manager.htm
@@ -1,68 +1,25 @@
-<!--{panel}--><div class='hd'>{#mod.news.manager.panel.1}</div>
-<div class='bd'>
-	<div id="{i#container}"></div>
-	<div style="text-align: right">
-		<input id="{i#bclose}" type="button" value="{#mod.news.manager.panel.2}" />
-	</div>
-</div>
-<!--{widget}--><h3>{#mod.news.admin.panel.title}</h3>
+<!--{widget}-->
+<div id="{i#id}" class="manager">
+    <div class="panel panel-default">
+        <div class="panel-heading">
 
-<table width="100%">
-	<tr>
-		<td width="50%">
-			<div id='{i#pagtop}'></div>
-		</td>
-		<td width="50%">
-			<div style="text-align: right">
-				<input id="{i#btnnew}" type="button" value="{#mod.news.admin.panel.addbutton}" />
-			</div>
-		</td>
-	</tr>
-</table>
-<div id='{i#table}'></div>
-<table width="100%">
-	<tr>
-		<td width="50%">
-			<div id='{i#pagbot}'></div>
-		</td>
-		<td width="50%" style="text-align: right">
-			<a href="#" id="{i#rcclear}">{#mod.news.admin.panel.recycle}</a>
-		</td>
-	</tr>
-</table>
-<!--{table}--><table class="bk-table-def">
-	<thead>
-		<tr>
-			<th>{#mod.news.admin.table.created}</th>
-			<th>{#mod.news.admin.table.title}</th>
-			<th></th>
-			<th>{#mod.news.admin.table.published}</th>
-			<th></th>
-			<th></th>
-			{v#scb}
-		</tr>
-	</thead>
-	<tbody>{v#rows}</tbody>
-</table>
-<!--{rowwait}--><tr>
-	<td colspan="7">{#mod.news.manager.rowwait.1}</td>
-</tr>
-<!--{row}--><tr>
-	<td>{v#dl}</td>
-	<td>{v#tl}</td>
-	<td><a href="{v#prv}" id="{i#title}-{v#id}" target="_blank" title="{#mod.news.admin.row.title}">{#mod.news.admin.row.title}</a></td>
-	<td>{v#dp}</td>
-	<td><a id="{i#edit}-{v#id}" href="#">{#mod.news.admin.row.edit}</a></td>
-	<td><a id="{i#remove}-{v#id}" href="#">{#mod.news.admin.row.delete}</a></td>
-	{v#scb}
-</tr>
-<!--{rowdel}--><tr>
-	<td style="text-decoration: line-through;">{v#dl}</td>
-	<td style="text-decoration: line-through;">{v#tl}</td>
-	<td><a href="{v#prv}" id="{i#title}-{v#id}" target="_blank" title="{#mod.news.admin.rowdel.prv}">{#mod.news.admin.rowdel.prv}</a></td>
-	<td colspan="3" align="center" style="text-align: center;"><a id="{i#restore}-{v#id}" href="#">{#mod.news.admin.rowdel.restore}</a></td>
-	{v#scb}
-</tr>
-<!--{btnpub}--><a id="{i#id}-{v#id}" href="#">{#mod.news.admin.btnpub.title}</a>
-<!--{scbhead}--><th>{#mod.news.admin.scbhead.title}</th>
-<!--{scbrow}--><td><a href="#" id="{i#id}-{v#id}">{#mod.news.admin.scbrow.title}</a></td>
+            <div class="row">
+                <div class="col-md-7">
+                    <h3 class="panel-title">Список новостей</h3>
+                </div>
+                <div class="col-md-5">
+                    <div class="btn-toolbar text-right">
+                        <span data-wait="show">
+                            <img src="/images/loading.gif"/> Загрузка...
+                        </span>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="panel-body">
+            <div id="{i#list}"></div>
+        </div>
+    </div>
+</div>
