draft: full refactoring source

--- a/src/content/view.html
+++ b/src/content/view.html
@@ -1,7 +1,7 @@
 <!--[*]
 [tt=main][/tt]
 [script]content/view.php[/script]
-[bkvar=notpub]{#news.notpub}[/bkvar]
+[bkvar=notpub]{#content.view.notpub}[/bkvar]
 
 [bkvar=title]<h3>{v#val}</h3>[/bkvar]
 
