--- a/src/js/wspace.htm
+++ b/src/js/wspace.htm
@@ -18,6 +18,15 @@
                     <li><a href="#" data-url="ws">
                         <img src="/images/loading.gif"/></a></li>
                 </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#" data-url="news.create"
+                           title="Добавить новость">
+                            + Добавить новость
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </div>
