news remove release

--- a/src/js/newsList.htm
+++ b/src/js/newsList.htm
@@ -29,20 +29,21 @@
     </td>
     <td>{v#published}</td>
     <td>
-        <a href="#" data-click="edit" data-id="{v#id}">
+        <button data-click="edit" data-id="{v#id}" class="btn btn-default btn-xs" data-wait="disable">
             Править
-        </a>
+        </button>
     </td>
-    <td>
-        <button id="{i#delete}-{v#id}" type="button" class="btn btn-default btn-xs hide" data-click="remove-show"
-                data-id="{v#id}">
+    <td class="text-center">
+        <button id="{i#remove}-{v#id}" data-click="remove-show" type="button" class="btn btn-default btn-xs"
+                data-id="{v#id}" data-wait="disable">
             Удалить
         </button>
-        <div id="{i#deletegroup}-{v#id}" class="btn-group hide">
-            <button type="button" class="btn btn-danger btn-xs" data-click="remove" data-id="{v#id}">
+        <div id="{i#removegroup}-{v#id}" data-click="remove" class="btn-group hide">
+            <button type="button" class="btn btn-danger btn-xs" data-id="{v#id}" data-wait="disable">
                 Удалить?
             </button>
-            <button type="button" class="btn btn-default btn-xs" data-click="remove-cancel" data-id="{v#id}">
+            <button data-click="remove-cancel" type="button" class="btn btn-default btn-xs" data-id="{v#id}"
+                    data-wait="disable">
                 Отмена
             </button>
         </div>
