add config editor

--- a/src/js/wspace.htm
+++ b/src/js/wspace.htm
@@ -12,6 +12,9 @@
                     <li>
                         <a href="#" data-url="manager.view">Список новостей</a>
                     </li>
+                    <li>
+                        <a href="#" data-url="config">Настройки</a>
+                    </li>
                 </ul>
 
                 <ul class="nav navbar-nav pull-right" data-wait="show">
