--- a/src/js/newsEditor.htm
+++ b/src/js/newsEditor.htm
@@ -44,13 +44,13 @@
         <div class="form-group">
             <label>Анонс</label>
 
-            <div id="{i#introEditor}"></div>
+            <div id="{i#introEditor}" data-rows="25"></div>
         </div>
 
         <div class="form-group">
             <label>Подробная часть новости</label>
 
-            <div id="{i#bodyEditor}" data-rows="12"></div>
+            <div id="{i#bodyEditor}" data-rows="20"></div>
         </div>
 
         <hr/>
