--- a/src/js/newsList.htm
+++ b/src/js/newsList.htm
@@ -1,6 +1,16 @@
 <!--{widget}-->
 <div class="newsList">
-    <div id="{i#list}"></div>
+	<div class="btn-group" data-click="filter">
+	  	<button id="{i#unPublic}" data-name="unPublic" type="button" class="btn btn-default">Не опубликованные</button>
+	  	<button id="{i#remove}" data-name="remove" type="button" class="btn btn-default">Удаленные</button>
+	  	<button id="{i#all}" data-name="all" type="button" class="btn btn-success hide">Показать весь список</button>
+	</div>
+   		
+   		<div id="{i#list}"></div>
+	    
+	    <div id="{i#pagination}">
+	    	<div id="{i#pag}"></div>
+	    </div>
 </div>
 
 <!--{table}-->
@@ -19,7 +29,7 @@
 </table>
 
 <!--{row}-->
-<tr>
+<tr class="{v#danger}">
     <td>{v#dateline}</td>
     <td>{v#title}</td>
     <td>
@@ -51,22 +61,8 @@
 </tr>
 
 <!--{publishButton}-->
-<a id="{i#btn}-{v#id}" href="#" data-click="publish" data-id="{v#id}">
-    Опубликовать
+<a id="{i#btn}-{v#id}" href="#" data-click="publish" data-id="{v#id}" data-act="{v#act}">
+    {v#act}
 </a>
 <img id="{i#loading}-{v#id}" class="hide" src="/images/loading.gif"/>
 <span id="{i#published}-{v#id}" class="hide"></span>
-
-<!--{paginator}-->
-<div>
-<ul class="pagination">
-  <li style="display: {v#dp};"><a href="" data-click="changePage" data-type="first" data-page="{v#firstpage}">&laquo;&laquo;</a></li>
-  <li style="display: {v#dp};"><a href="" data-click="changePage" data-type="prev">&lt;&mdash;prev</a></li>
-	{v#lipage}
-  <li style="display: {v#dn};"><a href="" data-click="changePage" data-type="next">next&mdash;&gt;</a></li>
-  <li style="display: {v#dn};"><a href="" data-click="changePage" data-type="last" data-page="{v#lastpage}">&raquo;&raquo;</a></li>
-</ul>
-</div>
-
-<!--{liPagePagin}-->
-<li class="{v#active}" style="display: {v#dli};"><a href="" data-click="changePage" data-page="{v#cnt}" data-type="curent">{v#cnt}</a></li>
